2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-editor.c (pk_cmd_editor): Stylize the prompt.

2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.h (pk_ios_search): Add new param: FLAGS to support
	partial match of handlers.
	* libpoke/libpoke.c (pk_ios_search): Likewise.
	* libpoke/ios.h (ios_search): Likewise.
	* libpoke/ios.c (ios_search): Likewise.
	* poke/pk-ios.c (pk_ios_alien_token_handler): Update to do partial
	search for IOS handlers.
	* poke/pk-cmd-ios.c (pk_cmd_file): Call `pk_ios_search' with
	`PK_IOS_SEARCH_F_EXACT' flag.
	(pk_cmd_mem): Likewise.
	(pk_cmd_nbd): Likewise.
	* testsuite/poke.libpoke/api.c (STREQ): New macro.
	(test_pk_ios): New function for testing IO space functions.
	(main): Call `test_pk_ios'.

2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-ios.c (pk_ios_alien_token_handler): Fix handling of
	alien tokens of length 1, i.e. $<.> tokens.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.h (enum pk_cmd_arg_type): Remove PK_CMD_ARG_TAG.
	(PK_CMD_ARG_TAG): Delete.
	* poke/pk-cmd.c (pk_cmd_exec_1): Remove handling of tag arguments.

2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (expr_to_ios): New function.
	(pk_cmd_close): Get a Poke expression as an
	argument intead of an IOS tag.
	(pk_cmd_sub): Likewise.
	(pk_cmd_ios): Likewise.
	* poke/pk-cmd-map.c (pk_cmd_map_remove): Likewise.
	(pk_cmd_map_create): Likewise.
	(pk_cmd_map_show): Likewise.
	(pk_cmd_map_entry_add): Likewise.
	(pk_cmd_map_entry_remove): Likewise.
	(pk_cmd_map_load): Likewise.
	(pk_cmd_info_maps): Likewise.
	* testsuite/poke.cmd/extract-1.pk: Adapt test accordingly.
	* testsuite/poke.cmd/close-sub-1.pk: Likewise.
	* testsuite/poke.map/ass-map-22.pk: Likewise.
	* testsuite/poke.pkl/ios-cur-1.pk: Likewise.
	* testsuite/poke.cmd/ios-1.pk: Likewise.
	* testsuite/poke.cmd/sub-2.pk: Likewise.
	* testsuite/poke.cmd/sub-2.pk: Likewise.
	* testsuite/poke.cmd/maps-3.pk: Likewise.