@@ -39,9 +39,6 @@ var pk_auto_map_p = 0;
 /* Whether map information shall be included in the REPL prompt.  */
 var pk_prompt_maps_p = 1;
 
-/* Whether prompt should be "(poke) " or "#!!# ". */
-var pk_prompt_commented_p = 0;
-
 /* The following global contains the name of the program to use to
    display documentation.  Valid values are `info' and `less'.  */
 var pk_doc_viewer = "info";
@@ -94,6 +91,13 @@ load "pk-help.pk";
 load "pk-map.pk";
 load "pk-settings.pk";
 load "pk-tracer.pk";
+
+/* Default value for poke_prompt.  */
+
+fun pk_prompt = string:
+{
+  return "(poke) ";
+}
 
 /* Add the current working directory to the load path.  */
 load_path = ".:" + load_path;
