@@ -1,5 +1,15 @@
 2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/poke.pk (pk_prompt): New function.
+	(pk_prompt_commented_p): Remove.
+	* poke/pk-repl.c (pk_prompt): Call the Poke function pk_prompt to
+	get the prompt string.
+	* poke/pk-settings.pk (Example): Remove the prompt-commented
+	setting.
+	* doc/poke.texi (Changing the Prompt): New sectino
+
+2023-11-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-editor.c (pk_cmd_editor): Stylize the prompt.
 
 2023-11-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
